--- a/La Mia Pizzeria 1/Views/Home/Index.cshtml
+++ b/La Mia Pizzeria 1/Views/Home/Index.cshtml
@@ -1,8 +1,61 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    { Layout = null; }
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Il mio primo blog!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="~/css/site.css" rel="stylesheet" />
+</head>
+
+<body>
+    <nav class="navbar bg-light py-3">
+        <div class="container-fluid">
+            <h3>Il Mio primo Blog</h3>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h1 class="my-3 color-red text-center">PIZZERIA</h1>
+
+        <table class="table table-sm align-middle">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Immagine</th>
+                    <th scope="col">Titolo</th>
+                    <th scope="col">Descrizione</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>0</td>
+                    <td style="width: 20%"><img src="http://iborbonipizzeria.com/wp-content/uploads/2018/10/rau.jpeg" class="img-fluid" alt="Pizza la classica"></td>
+                    <td style="width: 20%">LA CLASSICA</td>
+                    <td>L'intramontabile classico</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td style="width: 20%"><img src="https://media-cdn.tripadvisor.com/media/photo-s/18/f4/20/ae/i-borboni-pizzeria-la.jpg" class="img-fluid" alt="Pizza l'estiva"></td>
+                    <td style="width: 20%">L'ESTIVA</td>
+                    <td>Fresca e deliziosa</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td style="width: 20%"><img src="https://garage.pizza/wp-content/uploads/2019/11/P1110327-1080x1080.jpeg" class="img-fluid" alt="Pizza la golosa"></td>
+                    <td style="width: 20%">LA GOLOSA</td>
+                    <td>Consigliata ai piu golosi</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</body>
+
+</html>
