--- a/La Mia Pizzeria 1/Views/Home/Index.cshtml
+++ b/La Mia Pizzeria 1/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Il mio primo blog!</title>
+    <title>PIZZERIA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
@@ -16,14 +16,14 @@
 <body>
     <nav class="navbar bg-light py-3">
         <div class="container-fluid">
-            <h3>Il Mio primo Blog</h3>
+            <h3>PIZZERIA</h3>
         </div>
     </nav>
 
     <div class="container">
         <h1 class="my-3 color-red text-center">PIZZERIA</h1>
 
-        <table class="table table-sm align-middle">
+        <table class="table table-borderless table-striped align-middle">
             <thead>
                 <tr>
                     <th scope="col">ID</th>
@@ -54,7 +54,13 @@
             </tbody>
         </table>
     </div>
-
+    
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2023 - PIZZERIA - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
